convert from JNA to Java 25 FFM starting from version 5